--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "build": "vite build",
     "start": "node server/server.js",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "node server/scripts/seed.js",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma db push && vite build"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -41,6 +47,7 @@
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
+    "prisma": "^6.13.0",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.4"
   }
